--- a/CSS/Ejercicio 4/estilo4.css
+++ b/CSS/Ejercicio 4/estilo4.css
@@ -3,3 +3,29 @@ mundo”, borde negro y color del texto en azul. Aquéllos que se encuentren en
 segunda, cuarta y sexta posición deberán tener el fondo amarillo y el resto gris.
 Además, el texto del sexto párrafo debe tener la fuente con el doble de tamaño que
 el resto de los párrafos. */
+
+p{
+    border-style: solid;
+    border-color:black;
+    color: blue;
+    background-color: grey;
+}
+#p2{
+    border-style: solid;
+    border-color:black;
+    color: blue;
+    background-color: yellow;
+}
+#p4{
+    border-style: solid;
+    border-color:black;
+    color: blue;
+    background-color: yellow;
+}
+#p6{
+    border-style: solid;
+    border-color:black;
+    color: blue;
+    background-color: yellow;
+    font-size: 2em;
+}
